Use Noto Serif Bengali font for displaying Bengali text in the Auto Correct Update dialog

--- a/src/frontend/AutoCorrectDialog.ui
+++ b/src/frontend/AutoCorrectDialog.ui
@@ -70,6 +70,11 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="font">
+         <font>
+          <family>Noto Serif Bengali</family>
+         </font>
+        </property>
         <property name="frameShape">
          <enum>QFrame::StyledPanel</enum>
         </property>
@@ -85,6 +90,11 @@
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
+        </property>
+        <property name="font">
+         <font>
+          <family>Noto Serif Bengali</family>
+         </font>
         </property>
         <property name="frameShape">
          <enum>QFrame::StyledPanel</enum>
