--- a/src/frontend/images.qrc
+++ b/src/frontend/images.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>images/OpenBangla-Keyboard.png</file>
+        <file>images/tray.png</file>
         <file>images/icon.png</file>
         <file>images/outline_keyboard_hide_black_24dp.png</file>
         <file>images/outline_keyboard_black_24dp.png</file>
